--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,12 @@
 name: CI-Github-Actions
 
+# test different workflow triggers
 on:
   push:
     branches: [main]
 
 jobs:
+  # console-log is the name right? Try changing this
   console-log:
     runs-on: ubuntu-latest
 
@@ -12,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 12
+          node-version: 12, 14
 
       - name: Console Log
         run: node src/sum.js
