--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,20 @@
-name: CI-Github-Actions
+# name: CI-Github-Actions
+name: 'Random name'
+# # test different workflow triggers
+# on:
+#   push:
+#     branches: [main]
 
-# test different workflow triggers
-on:
-  push:
-    branches: [main]
+# jobs:
+#   # console-log is the name right? Try changing this
+#   console-log:
+#     runs-on: ubuntu-latest
 
-jobs:
-  # console-log is the name right? Try changing this
-  console-log:
-    runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: 12, 14
 
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 12, 14
-
-      - name: Console Log
-        run: node src/sum.js
+#       - name: Console Log
+#         run: node src/sum.js
