--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,9 @@
 # name: CI-Github-Actions
 name: 'Random name'
-# # test different workflow triggers
-# on:
-#   push:
-#     branches: [main]
-
+# test different workflow triggers
+on:
+  push:
+    branches: [main]
 # jobs:
 #   # console-log is the name right? Try changing this
 #   console-log:
