ci: update to trigger on pushes to feature branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: 'Random name'
 # test different workflow triggers
 on:
   push:
-    branches: [main]
+    branches: [feature/LEARN-jest]
 
 jobs:
   console_log_sum_function:
