ci: update to trigger for every branch that starts with feature

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: 'Random name'
 # test different workflow triggers
 on:
   push:
-    branches: [feature/LEARN-jest]
+    branches: [feature/**]
 
 jobs:
   console_log_sum_function:
