build: add auto-package-test dependency, use in index.js

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   },
   "devDependencies": {
     "jest": "^28.1.0"
+  },
+  "dependencies": {
+    "@lyoon-tcs/auto-package-test": "^0.3.0"
   }
 }
