fix: remove github token from npmrc file

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @lyoon-tcs:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=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
+npm.pkg.github.com/:_authToken=${NPM_TOKEN}
