--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/checkout@v3
       # installs specified version of Node.js - allows usage of node & npm commands
       - uses: actions/setup-node@v3
+        with:
+          registry-url: 'https://npm.pkg.github.com'
       - name: Install
         run: npm ci
         env:
