--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,11 @@ jobs:
     steps:
       # checks out repo onto runner, allowing scripts usage (build & test)
       - uses: actions/checkout@v3
+      - name: Use Node.js
       # installs specified version of Node.js - allows usage of node & npm commands
       - uses: actions/setup-node@v3
         with:
-          registry-url: 'https://npm.pkg.github.com'
+          node-version: '12.x'
       - name: Install
         run: npm ci
         env:
