--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,8 @@ jobs:
       # checks out repo onto runner, allowing scripts usage (build & test)
       - uses: actions/checkout@v3
       - name: Use Node.js
-      # installs specified version of Node.js - allows usage of node & npm commands
-      - uses: actions/setup-node@v3
+        # installs specified version of Node.js - allows usage of node & npm commands
+        uses: actions/setup-node@v3
         with:
           node-version: '12.x'
       - name: Install
