--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,6 @@ jobs:
         # installs specified version of Node.js - allows usage of node & npm commands
         uses: actions/setup-node@v3
       - name: Install
+        with:
+          secret: ${{ screts.GH_TOKEN }}
         run: npm ci
