--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # THIS DOESN'T WORK
       # # checks out repo onto runner, allowing scripts usage (build & test)
       # - uses: actions/checkout@v3
       # - name: Use Node.js
@@ -20,6 +21,7 @@ jobs:
       #   env:
       #     secret: ${{ secrets.GH_TOKEN }}
 
+      # THIS WORKS??? Is it the actions @v2 vs @v3 diff, or the with cache 'npm'?
       - uses: actions/checkout@v2
       - name: Use Node.js
         uses: actions/setup-node@v2
