--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
         run: npm ci
         # setting secret as environment variable
         env:
-          NPM_TOKEN: ${{ secrets.GH_TOKENN }}
+          NPM_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
