ci: will also run smoothly - finally found out what key is

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,10 @@ jobs:
         # installs specified version of Node.js - allows usage of node & npm commands
         uses: actions/setup-node@v3
         # Okay so if we don't have NPM_TOKEN: ${{ secrets.GH_TOKEN }} (currently using PAT), we get authentication warning.
-        # We are downloading a Github Package when we run npm ci, the auto-package-test. So question is: why specifically NPM_TOKEN
+        # We are downloading a Github Package when we run npm ci, the auto-package-test. So question is: why specifically NPM_TOKEN??
       - name: Install
         run: npm ci
         # setting secret as environment variable
+        # NPM_TOKEN comes from .npmrc. So what we are doing is creating a secret called GH_TOKEN, storing our PAT there. In .npmrc to authenticate, we set NPM_TOKEN to our PAT stored in GH_TOKEN (so it can't be exposed to public!!)
         env:
-          NPM_TOKEN: ${{ secrets.GH_TOKEN }}
+          lyoon-secret: ${{ secrets.GH_TOKEN }}
