--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @lyoon-tcs:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${lyoon-secret}
+//npm.pkg.github.com/:_authToken=${my-pat}
